--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,28 @@
-.container{
+.container {
     border: 2px solid black;
     width: 100%;
     min-height: 200px;
+}
+
+.contacts-form * {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contacts-form * input {
+    background-color: rgb(249, 249, 249);
+    padding-left: 10px;
+    border: 1px solid grey;
+    border-radius: 8px;
+    height: 30px;
+    width: 50%;
+}
+
+.contacts-form button {
+    background-color: black;
+    color: white;
+    border-radius: 8px;
+    height: 35px;
+    width: 10%;
 }
