--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,16 @@
+.adminContainer {
+    margin-top: 30vh;
+}
+.adminContainer * {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.adminForm  * {
+    margin: 5px 10px;
+    width: 15vw;
+}
+
 .container {
     border: 2px solid black;
     width: 100%;
