--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,13 +5,16 @@
 
 }
 .adminContainer {
-    margin-top: 30vh;
+    width: 210px;
+    margin: 30vh auto;
 }
 
 .adminContainer * {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 3px;
+    text-decoration: none;
 }
 
 .adminForm  * {
@@ -223,4 +226,15 @@ background-color: #007bff;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   cursor: pointer;
+}
+
+.getWatchesForm {
+  margin: 0 auto;
+  padding: 0;
+  border: 2px solid grey;
+  width: 174px;
+}
+
+.getWatchesForm input{
+  width: 172px;
 }
