--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4,16 +4,16 @@
   box-sizing: border-box;
 }
 .adminContainer {
-    width: 210px;
-    margin: 30vh auto;
+  width: 210px;
+  margin: 30vh auto;
 }
 
 .adminContainer * {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 3px;
-    text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3px;
+  text-decoration: none;
 }
 
 .adminForm * {
@@ -234,6 +234,27 @@ footer {
   margin: 0;
 }
 
+.divImg {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#card-quadratus {
+  display: flex;
+  flex-direction: column;
+  height: 500px;
+  width: 500px;
+  padding-top: 0;
+}
+
+.imgQ {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+
 .watchesName {
   font-size: 1.7rem;
   text-align: center;
@@ -265,6 +286,6 @@ footer {
   width: 174px;
 }
 
-.getWatchesForm input{
+.getWatchesForm input {
   width: 172px;
 }
