--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4,16 +4,16 @@
   box-sizing: border-box;
 }
 .adminContainer {
-  width: 210px;
-  margin: 30vh auto;
+    width: 210px;
+    margin: 30vh auto;
 }
 
 .adminContainer * {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 3px;
-  text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3px;
+    text-decoration: none;
 }
 
 .adminForm * {
@@ -148,6 +148,20 @@
   padding: 50px;
 }
 
+.contacts-form p {
+  /* opacity: 0.7; */
+  margin-top: 30px;
+  padding: 10px;
+  max-width: 600px;
+  text-align: justify;
+  text-indent: 30px;
+  font-size: 20px;
+  font-family: 'Chea News';
+  /* background-color: white; */
+  color: gray;
+  border-radius: 10px;
+}
+
 #addUserForm {
   max-width: 800px;
   margin: 0 auto;
@@ -159,6 +173,8 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  text-indent: 30px;
+
 }
 
 .addUserBtn {
@@ -234,27 +250,6 @@ footer {
   margin: 0;
 }
 
-.divImg {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-#card-quadratus {
-  display: flex;
-  flex-direction: column;
-  height: 500px;
-  width: 500px;
-  padding-top: 0;
-}
-
-.imgQ {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center center;
-}
-
 .watchesName {
   font-size: 1.7rem;
   text-align: center;
@@ -306,3 +301,24 @@ footer {
   height: 35px;
   margin-right: 15px;
 }
+
+/* .divImg {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#card-quadratus {
+  display: flex;
+  flex-direction: column;
+  height: 600px;
+  width: 400px;
+  padding-top: 0;
+}
+
+.imgQ {
+  width: 500px;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+} */
